infrastructure/main.tf

# TODO: Add provisioning of the elastic IP and the DNS records.

terraform {
 required_providers {
   aws = {
     source  = "hashicorp/aws"
     version = "~> 3.0"
   }
 }

 backend "s3" {
   bucket         = "stem-infrastructure-state"
   key            = "state/terraform.tfstate"
   region         = "eu-central-1"
   encrypt        = true
   dynamodb_table = "stem-infrastructure-state"
 }
}

variable "STEM" {
  type = string
}

provider "aws" {
  profile = "default"
  region  = "eu-central-1"
}

resource "aws_security_group" "STEM" {
  name        = "stem-security-group"
  description = "Allow HTTP, HTTPS and SSH traffic"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "STEM"
  }
}

resource "aws_eip_association" "eip_assoc" {
  instance_id   = "${aws_instance.STEM.id}"
  allocation_id = "eipalloc-78a96a79"
}

resource "aws_instance" "STEM" {
  key_name      = "STEM"
  ami           = "ami-05f7491af5eef733a"
  instance_type = "t2.medium"

  tags = {
    Name = "STEM"
  }

  vpc_security_group_ids = [
    aws_security_group.STEM.id
  ]


  provisioner "remote-exec" {
    inline = [
      "mkdir bootstrap_scripts",
    ]

    connection {
      type        = "ssh"
      user        = "ubuntu"
      private_key = var.STEM
      host        = self.public_dns
    }
  }

  provisioner "file" {
    source      = "bootstrap_scripts"
    destination = "bootstrap_scripts"

    connection {
      type        = "ssh"
      user        = "ubuntu"
      private_key = var.STEM
      host        = self.public_dns
    }
  }

  ebs_block_device {
    device_name = "/dev/sda1"
    volume_type = "gp2"
    volume_size = 30
  }
}
